assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');

*{
    margin: 0%;
    padding: 0%;
}

body{
    font-family: 'Roboto', sans-serif;
    display: grid;
    grid-template-areas: 
    "header header"
    "menu main"
    "footer footer";
}

header{
    grid-area: header;
    display: flex;
    justify-content: center;
    background-color: black;
    height: 3em;
    padding: 0.5em;
}

header h1{
    color: yellow;
    animation: rbow 1s linear  infinite forwards alternate;
    font-size: 2.5em;
    font-style: italic;
}

@keyframes rbow{
    0%{
        color: yellow;
    }
    25%{
        color: green
    }
    50%{
        color: blue;
    }
    75%{
        color:red;
    }
    100%{
        transform: scale(1.2);
    }
}

menu{
    width: 25%;
    background-color: #f1f1f1;
    padding: 3em;
    grid-area: menu;
    display: grid;
    justify-items: center;
    gap: 1em;
}

menu a{
    color: black;
    font-size: 1.2em;
    text-decoration: none;
    font-weight: 700;
}

menu img{
    width: 50%;
    animation: quake 3s linear  infinite forwards;
}

@keyframes quake{
    0%{
        transform:translateX(0);
    }
    25%{
        transform:translateX(1em);
    }
    50%{
        transform:translateX(0);
    }
    75%{transform:translateX(1em);}
}


main{
    grid-area: main;
    width: 75%;
}

footer{
    color: aqua;
    margin: 1px;
    grid-area: footer;
    background-color: #7b238b;
    display: flex;
    justify-content: space-evenly;
    height: 100%;
    height: 5em;
}

footer div{
    display: flex;
    flex-direction: column;
    text-align: center;
    padding: 1em;
}

footer div a{
    color: aqua;
    text-decoration: none;
}

i{
    padding: 1em;
}

